# vedana

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
apps/jims-demo/: .env.ci-cd  .env.example  .gitignore  Dockerfile  docker-compose.yml  jims-cli-demo.code-workspace  pyproject.toml  rxconfig.py
apps/jims-demo/jims_demo/: db.py  simple_pipeline.py
apps/jims-demo/migrations/: env.py
apps/jims-demo/migrations/versions/: 809f766c1939_initial.py
apps/stell/: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
apps/stell/migrations/: env.py
apps/stell/migrations/versions/: 2026_03_26_1539-70ad5a672fae_init.py
apps/vedana/: .env.ci-cd  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  rxconfig.py
apps/vedana/assets/: styles.css
apps/vedana/infra/grist/: home.sqlite3
apps/vedana/migrations/: env.py
apps/vedana/migrations/versions/: 2025_09_04_1742-2d3a66f5e43a_rm_filtering_steps.py  2025_09_16_1509-7e6b7d0b54d1_add_vedana_eval.py  2025_10_23_2234-74005cd73b8d_jims_add_contact_id.py  2025_12_03_1640-a726164a3da7_add_tests_db_store.py  2025_12_03_2255-c786d1e1ba43_update_eval_gds_table.py  2025_12_15_1946-2dfad73e5cce_move_emb_to_pgvector.py  2025_12_18_1459-513bf0d273b0_edit_vector_configuration.py  2026_01_20_2048-32ae51ea6092_add_config_plane.py  2026_02_18_1105-3c5cc51455c5_rm_memgraph_vector_indices.py  2026_04_10_1200-17f7b4956ca5_jims_add_external_id.py  2026_04_24_1200-8b1f2d4c9a71_add_pgvector_and_filter_indexes.py  2026_05_04_2040-a4ffc429e5ab_add_top_n.py
apps/vedana/scripts/: external-services.yaml
libs/jims-api/: CHANGELOG.md  README.md  pyproject.toml
libs/jims-api/src/jims_api/: main.py
libs/jims-api/tests/integration/: conftest.py  test_chat_api.py
libs/jims-backoffice/: .env.example  CHANGELOG.md  README.md  pyproject.toml  rxconfig.py
libs/jims-backoffice/assets/: styles.css
libs/jims-backoffice/jims_backoffice/: app.py  forms.py  settings.py
libs/jims-backoffice/jims_backoffice/routes/: home.py
libs/jims-backoffice/src/jims_backoffice/: Caddyfile  __init__.py  app_loader.py  jims_backoffice.py  main_app.py  settings.py  start_services.py  ui.py  util.py  utils.py
libs/jims-chatwoot/: pyproject.toml
libs/jims-chatwoot/src/jims_chatwoot/: main.py  settings.py
libs/jims-core/: CHANGELOG.md  README.md  pyproject.toml
libs/jims-core/src/jims_core/: __init__.py  app.py  db.py  schema.py  util.py
libs/jims-core/tests/: test_llm_provider.py  test_set_state.py
libs/jims-core/tests/cassettes/: test_aggregate_usage.yaml
libs/jims-telegram/: CHANGELOG.md  pyproject.toml
libs/jims-telegram/src/jims_telegram/: __init__.py  main.py  md2tgmd.py
libs/jims-tui/: CHANGELOG.md  README.md  pyproject.toml
libs/jims-tui/src/jims_tui/: __init__.py  chat_app.py  main.py
libs/jims-widget/: README.md  pyproject.toml
libs/jims-widget/src/jims_widget/: __init__.py  main.py  server.py
libs/jims-widget/tests/integration/: conftest.py  test_widget_app.py
libs/jims-widget/tests/unit/: test_extract_user_text.py  test_widget_response.py
libs/stell-core/: pyproject.toml
libs/stell-core/src/stell_core/: action_registry.py  api.py  app.py  configs.py  constants.py  db.py  dialogue_pipeline.py  form_manager.py  models.py  nlu.py  policy.py  story_router.py  utils.py
libs/vedana-backoffice/: .gitignore  CHANGELOG.md  pyproject.toml  rxconfig.py
libs/vedana-backoffice/assets/: styles.css
libs/vedana-backoffice/deploy/single-port-container/: Caddyfile  supervisord.conf
libs/vedana-backoffice/src/vedana_backoffice/: project_runtime.py  start_services.py  ui.py  util.py  vedana_backoffice.py
libs/vedana-backoffice/vedana_backoffice/: state.py  ui.py  util.py  vedana_backoffice.py
libs/vedana-backoffice/vedana_backoffice/components/: etl_graph.py  ui_chat.py
libs/vedana-backoffice/vedana_backoffice/graph/: build.py
libs/vedana-backoffice/vedana_backoffice/k8s/: config.py  job_launcher.py
libs/vedana-backoffice/vedana_backoffice/pages/: chat.py  etl.py  eval.py  jims.py  jims_thread_list_page.py  jims_thread_page.py  main_dashboard.py
libs/vedana-backoffice/vedana_backoffice/states/: chat.py  common.py  etl.py  eval.py  jims.py  main_dashboard.py
libs/vedana-core/: .env.example  CHANGELOG.md  README.md  pyproject.toml
libs/vedana-core/src/vedana_core/: app.py  config_plane_service.py  data_model.py  data_provider.py  db.py  filtered_rag_pipeline.py  graph.py  llm.py  orchestrator.py  rag_agent.py  rag_pipeline.py  reranker.py  settings.py  start_pipeline.py  strings.py  utils.py  vts.py
libs/vedana-core/tests/: test_data_model.py  test_llm.py
libs/vedana-core/tests/.litellm_cache/: cache.db
libs/vedana-etl/: CHANGELOG.md  README.md  alembic.ini  pyproject.toml
libs/vedana-etl/migrations/: env.py
libs/vedana-etl/src/vedana_etl/: app.py  catalog.py  catalog_eval_tables.py  config.py  pipeline.py  schemas.py  settings.py  steps.py  store.py
libs/vedana-etl/tests/: .env.example  docker-compose.yml
libs/vedana-etl/tests/infra/: docker-compose.ci.yml  update_grist.py
libs/vedana-etl/tests/integ/: conftest.py  test_anchor_attribute_filtering.py  test_anchor_embeddable_attributes.py  (+11 more)
libs/vedana-mcp/: pyproject.toml
projects/vedana/: .env.ci-cd  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  rxconfig.py  vedana.code-workspace
projects/vedana/app/: data_model.py  data_provider.py  db.py  gradio_app.py  gradio_ui.py  rag_agent.py  rag_pipeline.py  settings.py  tg_app.py  update_graph_db.py
projects/vedana/deploy/: deploy.excalidraw
projects/vedana/migrations/: env.py
projects/vedana/scripts/: README.md  kind-config.yaml  setup-kind.sh
projects/vedana/vedana/: data_model.py  data_provider.py  embeddings.py  gradio_app.py  gradio_ui.py  llm.py  rag_agent.py  rag_pipeline.py  settings.py  tg_app.py  update_graph_db.py  utils.py
(+235 files in other folders)
