[project]
name = "jims-cli-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jims-core>=0.5.1",
    "jims-tui>=0.5.1",
    "jims-telegram>=0.5.1",
    "alembic>=1.15.2",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
    "sentry-sdk[fastapi,opentelemetry]>=2.32.0",
]
