[project]
name = "jims-api"
version = "0.1.0"
description = "universal API for JIMS application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "fastapi>=0.128.0",
    "jims-core>=0.4.2",
    "loguru>=0.7.3",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
jims-core = { workspace = true }

[project.scripts]
jims-api = "jims_api.main:main"
