[project]
name = "jims-backoffice"
dynamic = ["version"]
description = "Reflex-based admin/backoffice UI for JIMS apps"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Timur Sheydaev", email = "tsheyd@epoch8.co" },
]

dependencies = [
    "reflex>=0.8.27,<0.9.0",
    "orjson>=3.11.3",
    "jims-core",
]

[project.scripts]
jims-backoffice-with-caddy = "jims_backoffice.start_services:main"

[tool.uv.build.wheel]
packages = ["jims_backoffice"]

include = [
  { path = "jims_backoffice/Caddyfile" }
]

[tool.uv.sources]
jims-core = { workspace = true }

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"
pattern-prefix = "jims-"

[tool.mypy]
plugins = ['pydantic.mypy']

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "mypy>=1.19.0",
    "pytest>=8.4.0",
    "pandas-stubs==2.3.2.250926",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff]
line-length = 120

[tool.uv-workspace-codegen]
generate = true
template_type = ["lib", "publish"]
generate_standard_pytest_step = false
typechecker = "mypy"
