[project]
name = "jims-telegram"
version = "0.2.0"
description = "Telegram interface for JIMS applications"
readme = "README.md"
authors = [
    { name = "Andrey Tatarinov", email = "a@tatarinov.co" },
    { name = "Timur Sheydaev", email = "tsheyd@epoch8.co" },
]
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18",
    "aiohttp>=3.11.16",
    "loguru>=0.7.3",
    "pydantic>=2.4.1",
    "pydantic-settings>=2.8.1",
    "click>=8.0",
    "jims-core",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "types-pyyaml>=6.0.12.20250822",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv-workspace-codegen]
generate = true
template_type = "lib"
generate_standard_pytest_step = false
typechecker = "mypy"

[project.scripts]
jims-telegram = "jims_telegram.main:main"
