[project]
name = "jims-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Andrey Tatarinov", email = "a@tatarinov.co" }]
requires-python = ">=3.12"
dependencies = ["textual>=3.1.0"]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=8.4.1",
    "ruff>=0.14.10",
    "types-pyyaml>=6.0.12.20250822",
]

[build-system]
requires = ["uv_build>=0.9.25, <0.10.0"]
build-backend = "uv_build"

[tool.uv-workspace-codegen]
generate = true
template_type = "lib"
generate_standard_pytest_step = false
typechecker = "mypy"

[project.scripts]
jims-tui = "jims_tui.main:main"
