[project]
name = "jims-widget"
dynamic = ["version"]
description = "Embeddable DeepChat-based widget for Jims applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "fastapi>=0.128.0",
    "jims-core>=0.5.1",
    "loguru>=0.7.3",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv.sources]
jims-core = { workspace = true }

[tool.uv-workspace-codegen]
generate = true
template_type = ["lib", "publish"]
generate_standard_pytest_step = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "mypy>=1.19.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.15.0",
]

[project.scripts]
jims-widget = "jims_widget.main:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jims_widget"]

[tool.hatch.build.targets.wheel.force-include]
"src/jims_widget/static" = "jims_widget/static"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"
pattern-prefix = "jims-"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"