[project]
name = "stell-core"
version = "0.1.0"
description = "Core library for Stell"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.10",
    "pydantic-ai>=1.44.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.46",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stell_core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

