[project]
name = "vedana-backoffice"
version = "0.1.0"
description = "Reflex-based admin/backoffice UI for Vedana"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reflex>=0.7.0",
    "vedana-core",
    "vedana-etl",
    "vedana-eval",
    "jims-backoffice",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ['pydantic.mypy']

[dependency-groups]
dev = [
    "ruff>=0.11.1",
    "mypy>=1.15.0",
    "pytest>=8.4.0",
    "pandas-stubs>=2.3.2.250827",
]

[tool.ruff]
line-length = 120


