[project]
name = "vedana-backoffice"
version = "0.1.1"
description = "Reflex-based admin/backoffice UI for Vedana"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andrey Tatarinov", email = "a@tatarinov.co" },
    { name = "Timur Sheydaev", email = "tsheyd@epoch8.co" },
]

dependencies = [
    "reflex>=0.8.0,<0.9.0",
    "orjson>=3.11.3",
    "vedana-core",
    "vedana-etl",
]

[project.scripts]
vedana-backoffice-with-caddy = "vedana_backoffice.start_services:main"

[tool.hatch.build.targets.wheel]
packages = ["vedana_backoffice"]

[tool.hatch.build.targets.wheel.force-include]
"vedana_backoffice/Caddyfile" = "vedana_backoffice/Caddyfile"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ['pydantic.mypy']

[dependency-groups]
dev = [
    "ruff>=0.11.1",
    "mypy>=1.15.0",
    "pytest>=8.4.0",
    "pandas-stubs>=2.3.2.250827",
]

[tool.ruff]
line-length = 120

[tool.gh-actions-codegen]
generate = true
template_type = "lib"
generate_standard_pytest_step = false
typechecker = "mypy"
