[project]
name = "vedana-core"
version = "0.5.0"
description = "Semantic Graph RAG App"
readme = "README.md"
authors = [
    { name = "Andrey Tatarinov", email = "a@tatarinov.co" },
    { name = "Timur Sheydaev", email = "tsheyd@epoch8.co" },
]
requires-python = ">=3.12"
dependencies = [
    "grist-api>=0.1.1",
    "neo4j>=5.28.1",
    "openai>=2.8.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "jims-core",
    "jims-tui",
    "jims-telegram",
    "jims-backoffice",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.21.0",
    "aiohttp>=3.11.18",
    "sentry-sdk[fastapi,opentelemetry]>=2.32.0",
    "litellm>=1.79.0",
    "aioitertools>=0.12.0",
    "async-lru>=2.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ['pydantic.mypy']

[dependency-groups]
dev = [
    "ruff>=0.11.1",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "python-dotenv>=1.1.0",
    "pytest>=8.4.0",
    "types-requests>=2.32.4.20250611",
    "pandas-stubs>=2.3.0.250703",
    "pytest-asyncio>=1.1.0",
    "litellm[caching]>=1.76.2",
]

[tool.ruff]
line-length = 120

[tool.gh-actions-codegen]
generate = true
template_type = "lib"
generate_standard_pytest_step = true
typechecker = "mypy"
