[project]
name = "vedana-core"
dynamic = ["version"]
description = "Semantic Graph RAG App"
readme = "README.md"
authors = [
    { name = "Andrey Tatarinov", email = "a@tatarinov.co" },
    { name = "Timur Sheydaev", email = "tsheyd@epoch8.co" },
]
requires-python = ">=3.12"
dependencies = [
    "grist-api>=0.1.1",
    "neo4j>=5.28.1",
    "openai>=2.8.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "jims-core",
    "jims-tui",
    "jims-telegram",
    "jims-backoffice",
    "vedana-etl",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.21.0",
    "aiohttp>=3.11.18",
    "sentry-sdk[fastapi,opentelemetry]>=2.32.0",
    "litellm>=1.79.0",
    "aioitertools>=0.12.0",
    "async-lru>=2.0.5",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"
pattern-prefix = "vedana-"

[tool.mypy]
plugins = ['pydantic.mypy']

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "mypy>=1.19.0",
    "python-dotenv>=1.1.0",
    "pytest>=8.4.0",
    "types-requests>=2.32.4.20250611",
    "pandas-stubs>=2.3.0.250703",
    "pytest-asyncio>=1.1.0",
    "litellm[caching]>=1.76.2",
]

[tool.ruff]
line-length = 120

[tool.uv-workspace-codegen]
generate = true
template_type = ["lib", "publish"]
generate_standard_pytest_step = false
typechecker = "mypy"
custom_steps = """
- name: Run tests
  env:
    DB_CONN_URI: "sqlite:///:memory:"
    GRIST_SERVER_URL: "http://0.0.0.0:8484"
    GRIST_API_KEY: "e30d2f274a538c05fecd14510887f8a3b7eab718"
    GRIST_DATA_MODEL_DOC_ID: "wEEmPY3UiwMD"
    GRIST_DATA_DOC_ID: "qAxQ1gcBKcW7"
    MEMGRAPH_URI: "bolt://localhost:7687"
    MEMGRAPH_USER: ""
    MEMGRAPH_PWD: ""
    EMBEDDINGS_DIM: "1024"
    OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
  run: |
    uv run pytest libs/vedana-core/
"""
