[project]
name = "vedana"
version = "2025.09.04-dev.20"
description = "Vedana"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16.4",
    "litellm[proxy]",
    "google-cloud-kms >= 2.21.3",
    "google-cloud-iam >= 2.19.1",
    "jims-core",
    "vedana-gradio",
    "vedana-etl",
    "jims-tui",
]

[tool.gh-actions-codegen]
generate = true
template_type = "project"
generate_standard_pytest_step = false
generate_typechecking_step = false
generate_alembic_migration_check_step = true

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
namespace_packages = true
enable_incomplete_feature = ["NewGenericSyntax"]
exclude = ["migrations/"]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "mypy>=1.16.1",
    "py-spy>=0.4.1",
    "ruff>=0.12.2",
    "types-requests>=2.32.4.20250611",
]
